<resources>
    <string name="app_name">고민, 그리고 선택</string>

    <string name="ime_next">다음</string>
    <string name="ime_done">완료</string>
    <string name="ime_send">전송</string>

    <!-- Strings related to login -->
    <string name="login_logo">고민,\n그리고\n선택</string>
    <string name="login_edt_email_hint">이메일</string>
    <string name="login_edt_password_hint">비밀번호</string>
    <string name="login_btn_login">로그인</string>
    <string name="login_tv_guide_register">처음 오셨나요?</string>
    <string name="login_tv_register">회원가입</string>

    <string name="login_result_fail">로그인에 오류가 발생했어요. 잠시후 다시 시도해주세요.</string>
    <string name="login_result_wrong_email">존재하지 않는 이메일이에요.</string>
    <string name="login_result_wrong_password">비밀번호가 틀렸어요.</string>
    <string name="login_result_null_email">이메일이 입력되지 않았어요.</string>
    <string name="login_result_null_password">비밀번호가 입력되지 않았어요.</string>

    <!-- Strings related to register -->
    <string name="register_title">회원가입</string>
    <string name="register_edt_name_hint">별명(한글)</string>
    <string name="register_edt_email_hint">이메일</string>
    <string name="register_edt_password_hint">비밀번호(6자리 이상)</string>
    <string name="register_edt_password_again_hint">비밀번호 확인</string>
    <string name="register_btn_submit">가입</string>

    <string name="register_result_fail">회원가입에 오류가 발생했어요. 잠시후 다시 시도해주세요.</string>
    <string name="register_result_exist_name">이미 존재하는 별명이에요.</string>
    <string name="register_result_exist_email">이미 존재하는 이메일이에요.</string>
    <string name="register_result_unvalid_name">잘못된 별명이에요.</string>
    <string name="register_result_unvalid_email">잘못된 이메일이에요.</string>
    <string name="register_result_unvalid_password">잘못된 비밀번호에요.</string>
    <string name="register_result_unsame_passwords">비밀번호가 일치하지 않아요.</string>
    <string name="register_result_success">회원가입에 성공했어요!</string>

    <!-- Strings related to list -->
    <string name="list_title">선택이 필요해요</string>

    <string name="list_none">작성된 고민이 없어요.</string>
    <!-- Strings related to my posts -->
    <string name="my_posts_title">나의 고민이에요</string>

    <!-- Strings related to read post -->
    <string name="read_post_title_dissatisfied">고민 중이에요..</string>
    <string name="read_post_title_satisfied">선택했어요!</string>
    <string name="read_post_comment_hint">댓글을 남겨주세요.</string>

    <string name="read_post_send_comment_null">댓글을 입력해주세요.</string>

    <string name="read_post_writer_select">%1$s의 선택 - %2$s</string>

    <!-- Strings related to notifications -->
    <string name="notifications_title">알림이에요</string>

    <!-- String related to add post -->
    <string name="add_post_title">고민을 나누세요</string>
    <string name="add_post_edit_title">고민을 수정하세요</string>
    <string name="add_post_post_title_hint">제목</string>
    <string name="add_post_post_description_hint">내용</string>
    <string name="add_post_select_a_hint">선택A</string>
    <string name="add_post_select_b_hint">선택B</string>

    <string name="add_post_send_title_null">제목을 입력해주세요.</string>
    <string name="add_post_send_description_null">내용을 입력해주세요.</string>
    <string name="add_post_send_select_a_null">선택A를 입력해주세요.</string>
    <string name="add_post_send_select_b_null">선택B를 입력해주세요.</string>

</resources>