<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="fragment"
            type="com.tao.wnc.view.LoginFragment" />
    </data>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/login_iv_background"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop" />


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:scrollbarStyle="outsideOverlay"
            android:scrollbarThumbVertical="@color/wnc28Orange">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_login_logo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginLeft="50dp"
                    android:layout_marginTop="77dp"
                    android:fontFamily="@font/h2mjre"
                    android:lineSpacingExtra="7dp"
                    android:text="@string/login_logo"
                    android:textColor="@color/wncLogo"
                    android:textSize="39sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edt_login_username"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="44dp"
                    android:layout_marginTop="212dp"
                    android:layout_marginRight="44dp"
                    android:drawablePadding="5dp"
                    android:hint="@string/login_edt_email_hint"
                    android:imeActionLabel="@string/ime_next"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:selectAllOnFocus="true"
                    android:textColor="@color/wncLightGray"
                    android:textColorHint="@color/wncLightGray"
                    app:backgroundTint="@color/wncLightGray"
                    app:drawableLeftCompat="@drawable/ic_email"
                    app:drawableStartCompat="@drawable/ic_email"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/tv_login_logo" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edt_login_password"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="44dp"
                    android:layout_marginTop="13dp"
                    android:layout_marginRight="44dp"
                    android:drawablePadding="5dp"
                    android:hint="@string/login_edt_password_hint"
                    android:imeActionLabel="@string/ime_send"
                    android:imeOptions="actionSend"
                    android:inputType="textPassword"
                    android:selectAllOnFocus="true"
                    android:textColor="@color/wncLightGray"
                    android:textColorHint="@color/wncLightGray"
                    app:backgroundTint="@color/wncLightGray"
                    app:drawableLeftCompat="@drawable/ic_lock"
                    app:drawableStartCompat="@drawable/ic_lock"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/edt_login_username" />

                <Button
                    android:id="@+id/btn_login_login"
                    android:layout_width="0dp"
                    android:layout_height="58dp"
                    android:layout_marginLeft="52dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="52dp"
                    android:onClick="@{fragment::onLoginClick}"
                    android:text="@string/login_btn_login"
                    android:textColor="@color/wncWhite"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/edt_login_password"
                    app:layout_constraintVertical_bias="0.0" />


                <LinearLayout
                    android:id="@+id/ll_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/btn_login_login">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="21dp"
                        android:text="@string/login_tv_guide_register"
                        android:textColor="@color/wncWhite"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginLeft="8dp"
                        android:background="?android:selectableItemBackground"
                        android:clickable="true"
                        android:focusable="true"
                        android:onClick="@{fragment::onRegisterClick}"
                        android:padding="2dp"
                        android:text="@string/login_tv_register"
                        android:textColor="@color/wncWhite"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="500dp"
                    app:layout_constraintTop_toBottomOf="@id/ll_login"
                    tools:ignore="MissingConstraints" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

    </FrameLayout>
</layout>